# nhs-dashboard

./: dashboard.py  hello.py  pyproject.toml
src/nhs_dashboard/data/: October-2024-AE-by-provider-8iWzH-1.ods  System_October-2024-AE-by-provider-8iWzH-1.csv  coordinates.csv  pydeck_test.py
src/nhs_dashboard/data/csv/: April-2024-AE-by-provider-24y7F-revised.csv  August-2024-AE-by-provider-A4au3-1.csv  December-2024-AE-by-provider-28BHd.csv  January-2025-AE-by-provider-HyTsU.csv  July-2024-AE-by-provider-2odvB-revised.csv  June-2024-AE-by-provider-HW3bJ.csv  May-2024-AE-by-provider-uPWkU-1.csv  November-2024-Monthly-AE-XLS-424KB.csv
src/nhs_dashboard/data/dummy/: capitals.csv
src/nhs_dashboard/data/xls/: April-2024-AE-by-provider-24y7F-revised.xls  August-2024-AE-by-provider-A4au3-1.xls  December-2024-AE-by-provider-28BHd.xls  January-2025-AE-by-provider-HyTsU.xls  July-2024-AE-by-provider-2odvB-revised.xls  June-2024-AE-by-provider-HW3bJ.xls  May-2024-AE-by-provider-uPWkU-1.xls  Monthly-AE-November-2024-XLS-424KB.xls  September-2024-AE-by-provider-t42ve.xls
src/nhs_dashboard/lib/: data_proc.py  ui.py
