[project]
name = "nhs-dashboard"
version = "0.1.0"
description = "A dashboard to visualise NHS performance data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "streamlit>=1.41.1",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['src']
include = ['nhs_dashboard*']

[tool.uv.sources]
nhs-dashboard = { workspace = true }

[dependency-groups]
dev = [
    "nhs-dashboard",
]
